--- a/No.2_24-0409/package.json
+++ b/No.2_24-0409/package.json
@@ -22,6 +22,7 @@
     "maath": "^0.10.7",
     "react-router-dom": "^6.22.3",
     "react-tilt": "^1.0.2",
-    "react-vertical-timeline-component": "^3.6.0"
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.163.0"
   }
 }
