--- a/no.5_25-0811/package.json
+++ b/no.5_25-0811/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@e2b/cli": "^2.1.0",
+    "@e2b/code-interpreter": "^2.0.0",
     "@hookform/resolvers": "^5.2.1",
     "@inngest/agent-kit": "^0.9.0",
     "@prisma/client": "^6.13.0",
@@ -51,7 +53,7 @@
     "inngest": "^3.39.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.539.0",
-    "next": "15.3.4",
+    "next": "^15.5.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.1",
