--- a/no.5_25-0811/package.json
+++ b/no.5_25-0811/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.36.3",
+    "@clerk/themes": "^2.4.44",
     "@e2b/cli": "^2.1.0",
     "@e2b/code-interpreter": "^2.0.0",
     "@hookform/resolvers": "^5.2.1",
